setup production build and server

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "license": "MIT",
   "scripts": {
     "build:dev": "npx webpack --env mode=development",
-    "start": "npx webpack --env mode=production",
-    "dev-server": "npx webpack serve --open --env mode=development"
+    "build:prod": "npx webpack --env mode=production",
+    "dev-server": "npx webpack serve --open --env mode=development",
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
@@ -20,6 +22,7 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^6.5.1",
+    "express": "^4.17.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-chrono": "^1.12.3",
